# AdventOfCode_2020

./: .gitmodules  Cargo.toml  README.md  generate_profiles.sh  run_all_2020.sh
inputs/examples/: 2020_03  2020_09  2020_10  2020_16  2020_16_2  2020_17  2020_19  2020_20  2020_21  2020_22  2020_24
inputs/real/: 2020_03  2020_09  2020_12  2020_14  2020_16  2020_17  2020_18  2020_19  2020_20
