[package]
name = "advent-of-code-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ahash = { version = "0.8" }
rayon = { version = "1" }
ndarray = { version = "0.15", features = ["rayon"] }
modinverse = { version = "0.1" }
bitvec = { version = "1.0" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
